refactor: streamline ride request processing and improve error handling